# Just1

./: README.md
Bot/Hardware/Solidworks/Parts/: 2x AA Battery Pack.SLDPRT  4x AA Battery Pack.SLDPRT  Camera Moudule 3 v8.SLDPRT  Car chassis - top.SLDPRT  Car chassis bottom.SLDPRT  Coupling Adapter.SLDPRT  Holder Motor.SLDPRT  L298N.SLDPRT  Pillar Hex.SLDPRT  Raspberry Holder.SLDPRT  TT motor.SLDPRT
Bot/Hardware/Solidworks/ToPrint/: Car chassis - top.STL  Car chassis bottom.STL  Holder Motor.STL  Raspberry Holder.STL
Bot/Software/: README.md  camera_test.py  controller_motor.py  read_imu.py  requirements.txt  test_camera.py  test_controller.py  test_motor.py  test_movements.py  utils_motor.py
Bot/Software/Reads/: How_to_Connect_Nintendo_Pro_Controller.md  How_to_Install_ROS2_on_Pi.md  How_to_Install_Ubuntu_on_Pi.md
Bot/Software/config/: nav2_params.yaml
Bot/Software/src/joystick_driver/: package.xml  setup.py
Bot/Software/src/joystick_driver/resource/: joystick_driver
Bot/Software/src/joystick_driver/src/joystick_driver/: joystick_node.py
Bot/Software/src/just1_bringup/: package.xml  setup.cfg  setup.py
Bot/Software/src/just1_bringup/config/: nav2_params.yaml
Bot/Software/src/just1_bringup/launch/: just1.launch.py
Bot/Software/src/just1_bringup/resource/: just1_bringup
Bot/Software/src/just1_camera/: package.xml  setup.cfg  setup.py
Bot/Software/src/just1_camera/just1_camera/: camera_encoder_node.py  camera_node.py  camera_web_socket.py
Bot/Software/src/just1_camera/resource/: just1_camera
Bot/Software/src/just1_camera/web/: Webpage.html
Bot/Software/src/just1_diagnostics/: package.xml  setup.cfg  setup.py
Bot/Software/src/just1_diagnostics/just1_diagnostics/: diagnostics_node.py
Bot/Software/src/just1_diagnostics/resource/: just1_diagnostics
Bot/Software/src/just1_imu/: package.xml  setup.cfg  setup.py
Bot/Software/src/just1_imu/just1_imu/: imu_node.py  scan_imu_sync.py
Bot/Software/src/just1_imu/resource/: just1_imu
Bot/Software/src/just1_interface/: CMakeLists.txt  package.xml
Bot/Software/src/just1_joystick_driver/: package.xml  setup.cfg  setup.py
Bot/Software/src/just1_joystick_driver/just1_joystick_driver/: joystick_node.py
Bot/Software/src/just1_joystick_driver/resource/: just1_joystick_driver
Bot/Software/src/just1_lidar/: CMakeLists.txt
Bot/Software/src/just1_manual_controller/: package.xml  setup.cfg  setup.py
Bot/Software/src/just1_manual_controller/just1_manual_controller/: controller_node.py
Bot/Software/src/just1_manual_controller/resource/: just1_manual_controller
Bot/Software/src/just1_motors/: package.xml  setup.cfg  setup.py
Bot/Software/src/just1_motors/just1_motors/: autonomous_controller_node.py  keyboard_controller_node.py  manual_controller_node.py  utils_motors.py
Bot/Software/src/just1_motors/resource/: just1_motors
Bot/Software/src/just1_state_monitor/: package.xml  setup.cfg  setup.py
Bot/Software/src/just1_state_monitor/just1_state_monitor/: state_monitor_node.py
Bot/Software/src/just1_state_monitor/resource/: just1_state_monitor
Bot/Software/src/just1_utils/: package.xml  setup.cfg  setup.py
Bot/Software/src/just1_utils/resource/: just1_utils
Bot/Software/src/ldlidar_stl_ros2/src/: demo.cpp
Bot/Software/src/manual_motor_controller/: package.xml  setup.py
Bot/Software/src/manual_motor_controller/manual_motor_controller/: controller_node.py
Bot/Software/src/manual_motor_controller/resource/: manual_motor_controller
Bot/Software/src/manual_motor_controller/src/manual_motor_controller/: controller_node.py
Bot/Software/src/robot_bringup/: package.xml  setup.py
Bot/Software/src/robot_bringup/launch/: robot.launch.py
Bot/Software/src/robot_bringup/resource/: robot_bringup
Bot/Software/src/robot_interface/: CMakeLists.txt  package.xml
Bot/Software/src/robot_interface/msg/: WheelSpeeds.msg
Bot/Software/src/robot_state_monitor/: package.xml  setup.cfg  setup.py
Bot/Software/src/robot_state_monitor/msg/: WheelSpeeds.msg
Bot/Software/src/robot_state_monitor/resource/: robot_state_monitor
Bot/Software/src/robot_state_monitor/robot_state_monitor/: state_publisher_node.py
Bot/Software/src/robot_state_monitor/src/robot_state_monitor/: state_publisher_node.py
Bot/Software/src/robot_state_publisher/: package.xml  setup.py
Bot/Software/src/robot_state_publisher/src/robot_state_publisher/: state_publisher_node.py
Bot/Software/src/robot_tests/: package.xml  setup.py
Bot/Software/src/robot_tests/resource/: robot_tests
Bot/Software/src/robot_tests/robot_tests/: test_node.py
Bot/Software/src/robot_tests/test/: test_motor_control.py
Bot/Software/src/robot_utils/: package.xml  setup.py
Bot/Software/src/robot_utils/resource/: robot_utils
Bot/Software/src/robot_utils/src/robot_utils/: motor_control.py
Hardware/: Bill_of_material.md
