<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and configurations for bringing up the robot</description>
  <maintainer email="nicolasrdrgzrosdev@protonmail.com">Nico</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>just1_joystick_driver</depend>
  <depend>just1_manual_controller</depend>
  <depend>just1_state_monitor</depend>
  <depend>just1_utils</depend>
  <depend>just1_diagnostics</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 