<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>just1_joystick_driver</name>
  <version>0.0.1</version>
  <description>Driver for joystick input and control. Listen to joystick events and publish them to a topic.</description>
  <maintainer email="nicolasrdrgzrosdev@protonmail.com">Nico</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>pygame</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 