<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>just1_manual_controller</name>
  <version>0.0.1</version>
  <description>Manual motor controller for robot movement. Listen to joystick topic and control motors.</description>
  <maintainer email="nicolasrdrgzrosdev@protonmail.com">Nico</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>just1_utils</depend>
  <depend>just1_interface</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 