<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manual_motor_controller</name>
  <version>0.0.1</version>
  <description>Manual motor controller for robot movement</description>
  <maintainer email="nicolasrdrgzrosdev@protonmail.com">Nico</maintainer>
  <license>Apache License 2.0</license>


  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_utils</depend>
  <depend>robot_state_publisher</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 