<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and configurations for bringing up the robot</description>
  <maintainer email="nicolasrdrgzrosdev@protonmail.com">Nico</maintainer>
  <license>Apache License 2.0</license>


  <depend>joystick_driver</depend>
  <depend>manual_motor_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_utils</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 