<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_state_publisher</name>
  <version>0.0.1</version>
  <description>Publishes robot state information</description>
  <maintainer email="nicolasrdrgzrosdev@protonmail.com">Nico</maintainer>
  <license>Apache License 2.0</license>


  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_tests</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 